// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the correct snapshot for no expenses 1`] = `
<div>
  <div>
    <p>
      No expenses found!
    </p>
  </div>
</div>
`;

exports[`should render the correct snapshot for one expense 1`] = `
<div>
  <div>
    <h3>
      Expenses Summary
    </h3>
    <p>
      You are viewing 
      1
       
      expense
       totaling 
      $94.34
    </p>
  </div>
</div>
`;

exports[`should render the correct snapshot for two expenses 1`] = `
<div>
  <div>
    <h3>
      Expenses Summary
    </h3>
    <p>
      You are viewing 
      2
       
      expenses
       totaling 
      $94.34
    </p>
  </div>
</div>
`;
